// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error view 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      Something's gone wrong
    </Text>
    <Text
      allowFontScaling={false}
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </Text>
  </View>
  <Button
    title="Retry"
  />
</View>
`;

exports[`2. an error view with header 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    Header
  </Text>
  <View>
    <Text
      allowFontScaling={false}
    >
      Something's gone wrong
    </Text>
    <Text
      allowFontScaling={false}
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </Text>
  </View>
  <Button
    title="Retry"
  />
</View>
`;

exports[`3. an empty list 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      Empty state
    </Text>
    <View>
      <Watermark
        height={250}
        width={300}
      />
    </View>
  </View>
</View>
`;

exports[`4. loading state 1`] = `
<RCTScrollView
  nestedScrollEnabled={true}
  removeClippedSubviews={true}
>
  <View>
    <View>
      <View>
        <View>
          <Link>
            <View>
              <Card
                highResSize={1670}
                imageRatio={1}
                imageUri={null}
                isLoading={true}
                showImage={true}
              >
                <ArticleSummary
                  headline={<ArticleSummaryHeadline />}
                />
              </Card>
            </View>
          </Link>
        </View>
      </View>
      <View>
        <View>
          <View />
        </View>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Link>
            <View>
              <Card
                highResSize={1670}
                imageRatio={1}
                imageUri={null}
                isLoading={true}
                showImage={true}
              >
                <ArticleSummary
                  headline={<ArticleSummaryHeadline />}
                />
              </Card>
            </View>
          </Link>
        </View>
      </View>
      <View>
        <View>
          <View />
        </View>
      </View>
    </View>
    <View>
      <View>
        <View>
          <Link>
            <View>
              <Card
                highResSize={1670}
                imageRatio={1}
                imageUri={null}
                isLoading={true}
                showImage={true}
              >
                <ArticleSummary
                  headline={<ArticleSummaryHeadline />}
                />
              </Card>
            </View>
          </Link>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View>
          <View>
            <View />
          </View>
          <ActivityIndicator
            color="#DBDBDB"
            size="large"
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
